# AsyncAPIService

./: .flake8  Dockerfile  README.md  docker-compose.yml  example.env  init.sql  pyproject.toml
nginx/: nginx.conf
nginx/configs/: fastapi.conf  site.conf
src/: main.py
src/api/v1/: films.py  genres.py  persons.py  services.py  utils.py
src/core/: auth.py  config.py  logger.py
src/db/: cache.py  elastic.py  redis.py  repository.py
src/models/: film.py  genre.py  mixin.py  person.py  utils.py
src/services/: film.py  genre.py  person.py  response_messages.py  utils.py
tests/functional/: conftest.py  docker-compose.yml  es_mapping.py  example.env  settings.py
tests/functional/src/: base.py  test_cache.py  test_film.py  test_genre.py  test_person.py  test_services.py
tests/functional/testdata/: films.py  genres.py  index_fillings.py  persons.py
tests/functional/utils/: backoff.py  wait_for_es.py  wait_for_redis.py
